@@ -37,9 +37,10 @@ class virtual scheduler_generic : object
   method oper_in_basic_block : Mach.operation -> bool
       (* Says whether the given operation terminates a basic block *)
   method is_store : Mach.operation -> bool
-      (* Says whether the given operation is a memory store *)
+      (* Says whether the given operation is a memory store
+         or an atomic load. *)
   method is_load : Mach.operation -> bool
-      (* Says whether the given operation is a memory load *)
+      (* Says whether the given operation is a non-atomic memory load *)
   method is_checkbound : Mach.operation -> bool
       (* Says whether the given operation is a checkbound *)
   (* Entry point *)
